# react-native-fast-base64

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-fast-base64.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fastbase64/: FastBase64Module.java  FastBase64Package.java
cpp/: Base64.cpp  Base64.h  TypedArray.cpp  TypedArray.h  react-native-fast-base64.cpp  react-native-fast-base64.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/fastbase64example/: ReactNativeFlipper.java
example/android/app/src/main/java/com/fastbase64example/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/fastbase64example/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/FastBase64Example/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/FastBase64Example.xcodeproj/: project.pbxproj
example/ios/FastBase64Example.xcodeproj/xcshareddata/xcschemes/: FastBase64Example.xcscheme
example/ios/FastBase64Example.xcworkspace/: contents.xcworkspacedata
example/ios/FastBase64ExampleTests/: FastBase64ExampleTests.m
example/src/: App.tsx
ios/: FastBase64.h  FastBase64.mm
ios/FastBase64.xcodeproj/: project.pbxproj
src/: browser.ts  index.ts  index.tsx
